compiler/testData/diagnostics/tests/Redeclarations.jet
package redeclarations {
  object <!REDECLARATION, REDECLARATION!>A<!> {
    val x : Int = 0

    val A = 1
  }

  package <!REDECLARATION!>A<!> {
    class A {}
  }

  class <!REDECLARATION, REDECLARATION!>A<!> {}

  val <!REDECLARATION!>A<!> = 1

}
